--- a/makefile.i386.Darwin
+++ b/makefile.i386.Darwin
@@ -6,8 +6,8 @@
 
 ## --- If no f90 compiler is available comment out -DHAVE_F90
 
-CC       = gcc
-CFLAGS   = -O2 -DHAVE_F90 -Wformat ##-Wall 
+CC       = clang
+CFLAGS   = -O2 -g -DHAVE_F90 -Wformat ##-Wall 
 ARFLAGS  = rvs
 
 F90C     = gfortran           # Intel F90 compiler
