Replaced SVN id with git revision
Also updated all mentions of SVN_ID to REV_ID in the code. Makefile now
should call git and get string from last version.

--- a/rh15d_mpi/Makefile
+++ b/rh15d_mpi/Makefile
@@ -17,12 +17,13 @@ NCDF_DIR = /opt/local
 #NCDF_DIR = /Users/tiago/local
 
 # Try to get SVN revision from svn info, set preprocessor macros if successful 
-REV=$(shell svn info | grep Revision)
+#REV=$(shell svn info | grep Revision)
+REV=$(shell git describe --always)
 ifeq ($(REV), )
     CFLAGS  = -O2 -I../ -I$(NCDF_DIR)/include/ 
 else
-    SVN = $(shell svn info | grep Revision)  $(shell svn info |grep Author)
-    CFLAGS  = -O2 -I../ -I$(NCDF_DIR)/include/ -D'SVN_ID="$(SVN)"'
+    REV = $(shell git log -1 --pretty=format:"%h%x09%an%x09%ai")
+    CFLAGS  = -O2 -I../ -I$(NCDF_DIR)/include/ -D'REV_ID="$(REV)"'
 endif
 
 LDFLAGS = -L../ -L$(NCDF_DIR)/lib/
