Fixed serious bug in Stokes QUV in 1.5D
Now properly calling Bproject() before calculation of final ray (as in
solveray). This ensures consistency between rh15d and rhf1d. Also
cleaned memory leak from persistent calls to Bproject(). In addition,
did some whitespace cleanup.

--- a/rh15d_mpi/Makefile
+++ b/rh15d_mpi/Makefile
@@ -10,8 +10,8 @@ GEOMETRY = ONE_D_PLANE
 
 include ../makefiles/makefile.$(CPU).$(OS)
 
-CC = openmpicc
-LD = openmpicc
+CC = mpicc
+LD = mpicc
 AR = ar
 NCDF_DIR = /opt/local
 #NCDF_DIR = /Users/tiago/local
