Added DELO_BEZIER3 and Bezier3 formal solvers for polarized and unpolarized light

--- a/rh15d_mpi/Makefile
+++ b/rh15d_mpi/Makefile
@@ -42,7 +42,7 @@ ONE_D_OBJS = anglequad.o      feautrier.o     formal.o           hydrostat.o   \
              readj_p.o        scatter_p.o     writespect_p.o     initial_p.o   \
              writeindata_p.o  writeAux_p.o    parallel.o         iterate_p.o   \
              ludcmp_p.o       accelerate_p.o  redistribute_p.o   statequil_p.o \
-	         distribute_jobs.o
+	     bezier.o         distribute_jobs.o
 
 SUBSTITUTE = pops_xdr.o
 
@@ -53,7 +53,7 @@ SUBSTITUTE = pops_xdr.o
              writespect_p.o   writeAux_p.o    writeindata_p.o   background_p.o \
              initial_p.o      scatter_p.o     writeRay.o        project.o      \
              piecestokes.o    piecewise.o     riiplane.o        solveray.o     \
-             escape.o         distribute_jobs.o
+             escape.o         bezier.o        distribute_jobs.o
 
 BACKGROPAC = anglequad.o      backgrcontr.o   multiatmos.o      project.o
 
@@ -175,6 +175,9 @@ parallel.o:             ../rh.h          ../atom.h        ../atmos.h       \
 
 piecestokes.o:          ../rh.h          ../atom.h        ../atmos.h       \
                         geometry.h       ../spectrum.h
+
+bezier.o:               ../rh.h          ../atom.h        ../atmos.h       \
+                        geometry.h       ../spectrum.h    bezier.h
 
 piecewise.o:            ../rh.h          ../atom.h        ../atmos.h       \
                         geometry.h       ../spectrum.h
